--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -12571,6 +12571,83 @@ h3, .h3 {
   text-align: center;
 }
 
+.why-us {
+  padding: 80px 0;
+}
+.why-us .box {
+  background-color: #e2e2e2;
+  border-radius: 113px;
+  padding: 92px;
+}
+
+.funding {
+  padding: 80px 0;
+  background-color: #2b4c7f;
+}
+.funding * {
+  color: #fff;
+}
+.funding img {
+  width: 1.62in;
+  height: 1.62in;
+  object-fit: contain;
+  object-position: center center;
+  margin: 2rem auto;
+}
+.funding .heading {
+  font-family: "GilroySemiBold", sans-serif;
+  font-size: 24px;
+  margin-bottom: 0;
+}
+
+.eligibility {
+  padding: 80px 0;
+}
+.eligibility img {
+  width: 1.77in;
+  height: 1.77in;
+  object-fit: contain;
+  object-position: center center;
+  margin: 0 auto 2rem;
+}
+.eligibility .heading {
+  font-family: "GilroySemiBold", sans-serif;
+  font-size: 24px;
+  margin-bottom: 1rem;
+  color: #2b4c7f;
+}
+
+.faq {
+  background-color: #55af5b;
+  padding: 80px 0;
+}
+.faq * {
+  color: #fff;
+}
+
+.brands {
+  padding: 80px 0;
+}
+.brands img {
+  width: 100%;
+  height: 2.07in !important;
+  object-fit: contain;
+  object-position: center center;
+}
+
+.contact {
+  padding: 80px 0;
+}
+
+.copyright {
+  padding: 1.5rem 0;
+  text-align: center;
+  font-size: 30px;
+  font-family: "GilroySemiBold", sans-serif;
+  background-color: #2b4c7f;
+  color: #fff;
+}
+
 @media (min-width: 1200px) {
   .btn {
     min-width: 300px;
