--- a/scss/bootstrap/main.scss
+++ b/scss/bootstrap/main.scss
@@ -85,3 +85,81 @@ h3 {
     }
   }
 }
+
+.why-us {
+  padding: 80px 0;
+  .box {
+    background-color: #e2e2e2;
+    border-radius: 113px;
+    padding: 92px;
+  }
+}
+
+.funding {
+  padding: 80px 0;
+  background-color: $primary;
+  * {
+    color: $white;
+  }
+  img {
+    width: 1.62in;
+    height: 1.62in;
+    object-fit: contain;
+    object-position: center center;
+    margin: 2rem auto;
+  }
+  .heading {
+    font-family: "GilroySemiBold", sans-serif;
+    font-size: 24px;
+    margin-bottom: 0;
+  }
+}
+
+.eligibility {
+  padding: 80px 0;
+  img {
+    width: 1.77in;
+    height: 1.77in;
+    object-fit: contain;
+    object-position: center center;
+    margin: 0 auto 2rem;
+  }
+  .heading {
+    font-family: "GilroySemiBold", sans-serif;
+    font-size: 24px;
+    margin-bottom: 1rem;
+    color: $primary;
+  }
+}
+
+.faq {
+    background-color: $accent;
+    padding: 80px 0;
+
+    * {
+        color: $white;
+    }
+}
+
+.brands {
+    padding: 80px 0;
+    img {
+        width: 100%;
+        height: 2.07in !important;
+        object-fit: contain;
+        object-position: center center;
+    }
+}
+
+.contact {
+    padding: 80px 0;
+}
+
+.copyright {
+    padding: 1.5rem 0;
+    text-align: center;
+    font-size: 30px;
+    font-family: "GilroySemiBold", sans-serif;
+    background-color: $primary;
+    color: $white;
+}
