--- a/scss/bootstrap/main.scss
+++ b/scss/bootstrap/main.scss
@@ -14,6 +14,10 @@
   font-family: "GilroyLight", sans-serif;
 }
 
+.navbar {
+    padding: 1rem 0;
+}
+
 .navbar-nav {
   .nav-link {
     font-family: "GilroySemibold", sans-serif;
@@ -73,7 +77,7 @@ h3 {
       margin-right: auto;
       margin-bottom: 24px;
       width: 100%;
-      height: 6.12in;
+      height: 3.12in;
       object-fit: contain;
       object-position: center center;
     }
@@ -162,4 +166,39 @@ h3 {
     font-family: "GilroySemiBold", sans-serif;
     background-color: $primary;
     color: $white;
+}
+
+.banner {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 75vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    h1 {
+        position: relative;
+        z-index: 3;
+        color: white;
+        font-family: "GilroyBold", sans-serif;
+    }
+    &::before {
+        position: absolute;
+        content: '';
+        z-index: 1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: $primary, $alpha: 0.7);
+    }
+
+    &.about-us {
+        background-image: url('../images/about-bg.jpg');
+    }
+
+    &.apply-now {
+        background-image: url('../images/apply-now.jpg');
+    }
 }
