--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2493,7 +2493,7 @@ textarea.form-control-lg {
   background-position: right 2rem center;
   background-size: 16px 12px;
   border: 1px solid #ced4da;
-  border-radius: 0.25rem;
+  border-radius: 12.5rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
 }
@@ -12656,7 +12656,7 @@ h3, .h3 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 75vh;
+  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12683,6 +12683,27 @@ h3, .h3 {
 }
 .banner.apply-now {
   background-image: url("../images/apply-now.jpg");
+}
+
+.banner-2 {
+  padding: 80px 0;
+}
+
+.measures input[type=checkbox] {
+  display: none;
+}
+.measures input[type=checkbox] + label {
+  width: 100%;
+  padding: 0.5rem 2.5rem 0.5rem 1.5rem;
+  border: 1px solid rgba(43, 76, 127, 0.4);
+  border-radius: 12.5rem;
+  background-repeat: no-repeat;
+  background-position: center right 0.5rem;
+}
+.measures input[type=checkbox]:checked + label {
+  background-color: #2b4c7f;
+  color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' class='bi bi-check' viewBox='0 0 16 16'%3E%3Cpath d='M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z'/%3E%3C/svg%3E");
 }
 
 @media (min-width: 1200px) {
