--- a/scss/bootstrap/main.scss
+++ b/scss/bootstrap/main.scss
@@ -15,7 +15,7 @@
 }
 
 .navbar {
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 .navbar-nav {
@@ -137,68 +137,94 @@ h3 {
 }
 
 .faq {
-    background-color: $accent;
-    padding: 80px 0;
+  background-color: $accent;
+  padding: 80px 0;
 
-    * {
-        color: $white;
-    }
+  * {
+    color: $white;
+  }
 }
 
 .brands {
-    padding: 80px 0;
-    img {
-        width: 100%;
-        height: 2.07in !important;
-        object-fit: contain;
-        object-position: center center;
-    }
+  padding: 80px 0;
+  img {
+    width: 100%;
+    height: 2.07in !important;
+    object-fit: contain;
+    object-position: center center;
+  }
 }
 
 .contact {
-    padding: 80px 0;
+  padding: 80px 0;
 }
 
 .copyright {
-    padding: 1.5rem 0;
-    text-align: center;
-    font-size: 30px;
-    font-family: "GilroySemiBold", sans-serif;
-    background-color: $primary;
-    color: $white;
+  padding: 1.5rem 0;
+  text-align: center;
+  font-size: 30px;
+  font-family: "GilroySemiBold", sans-serif;
+  background-color: $primary;
+  color: $white;
 }
 
 .banner {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 75vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  h1 {
     position: relative;
-    h1 {
-        position: relative;
-        z-index: 3;
-        color: white;
-        font-family: "GilroyBold", sans-serif;
-    }
-    &::before {
-        position: absolute;
-        content: '';
-        z-index: 1;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba($color: $primary, $alpha: 0.7);
-    }
+    z-index: 3;
+    color: white;
+    font-family: "GilroyBold", sans-serif;
+  }
+  &::before {
+    position: absolute;
+    content: "";
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: $primary, $alpha: 0.7);
+  }
 
-    &.about-us {
-        background-image: url('../images/about-bg.jpg');
-    }
+  &.about-us {
+    background-image: url("../images/about-bg.jpg");
+  }
 
-    &.apply-now {
-        background-image: url('../images/apply-now.jpg');
+  &.apply-now {
+    background-image: url("../images/apply-now.jpg");
+  }
+}
+
+.banner-2 {
+  padding: 80px 0;
+}
+
+.measures {
+  input[type="checkbox"] {
+    display: none;
+    & + label {
+      width: 100%;
+      padding: 0.5rem 2.5rem 0.5rem 1.5rem;
+      border: 1px solid rgba($color: $primary, $alpha: 0.4);
+      border-radius: $border-radius * 50;
+      //background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%232b4c7f66' class='bi bi-check' viewBox='0 0 16 16'%3E%3Cpath d='M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: center right 0.5rem;
     }
+    &:checked {
+      & + label {
+        background-color: $primary;
+        color: $white;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' class='bi bi-check' viewBox='0 0 16 16'%3E%3Cpath d='M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z'/%3E%3C/svg%3E");
+      }
+    }
+  }
 }
