--- a/scss/bootstrap/main.scss
+++ b/scss/bootstrap/main.scss
@@ -218,7 +218,13 @@ h3 {
       border-radius: $border-radius * 50;
       //background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%232b4c7f66' class='bi bi-check' viewBox='0 0 16 16'%3E%3Cpath d='M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z'/%3E%3C/svg%3E");
       background-repeat: no-repeat;
-      background-position: center right 0.5rem;
+      background-size: 24px;
+      background-position: center right 1rem;
+      transition: all .2s ease-in-out;
+
+      &:hover {
+        box-shadow: 0 0 3px $primary;
+      }
     }
     &:checked {
       & + label {
