--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -12488,9 +12488,21 @@ textarea.form-control-lg {
   padding: 1rem 0;
 }
 
+.btn {
+  transition: all 0.2s ease-in-out;
+}
+.btn:hover {
+  transform: translateY(-4px);
+}
+
 .navbar-nav .nav-link {
   font-family: "GilroySemibold", sans-serif;
   color: #2b4c7f !important;
+  transition: all 0.2s ease-in-out;
+  border-bottom: 2px solid transparent;
+}
+.navbar-nav .nav-link:hover {
+  border-bottom-color: #2b4c7f;
 }
 
 h1, .h1 {
@@ -12548,6 +12560,10 @@ h3, .h3 {
   height: 3.12in;
   object-fit: contain;
   object-position: center center;
+  transition: all 0.2s ease-in-out;
+}
+.services .box img:hover {
+  transform: scale(1.1);
 }
 .services .box .service,
 .services .box .description {
@@ -12578,6 +12594,10 @@ h3, .h3 {
   object-fit: contain;
   object-position: center center;
   margin: 2rem auto;
+  transition: all 0.2s ease-in-out;
+}
+.funding img:hover {
+  transform: rotate3d(1, 1, 1, 4deg);
 }
 .funding .heading {
   font-family: "GilroySemiBold", sans-serif;
@@ -12594,6 +12614,10 @@ h3, .h3 {
   object-fit: contain;
   object-position: center center;
   margin: 0 auto 2rem;
+  transition: all 0.2s ease-in-out;
+}
+.eligibility img:hover {
+  transform: rotateY(180deg);
 }
 .eligibility .heading {
   font-family: "GilroySemiBold", sans-serif;
@@ -12618,6 +12642,10 @@ h3, .h3 {
   height: 2.07in !important;
   object-fit: contain;
   object-position: center center;
+  transition: all 0.2s ease-in-out;
+}
+.brands img:hover {
+  transform: scale(1.1);
 }
 
 .contact {
@@ -12710,6 +12738,30 @@ h3, .h3 {
   .why-us .box {
     padding: 1.5rem;
     border-radius: 50px;
+  }
+  .funding img {
+    width: 0.6in;
+    height: 0.6in;
+    display: inline-block;
+    margin: 0 8px 0 0;
+  }
+  .funding h4:first-child, .funding .h4:first-child {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  .funding h4:last-child, .funding .h4:last-child {
+    display: inline-block;
+  }
+  .services .box img {
+    height: 1.5in;
+  }
+  .eligibility img {
+    width: 0.6in;
+    height: 0.6in;
+    margin-bottom: 0.5rem;
+  }
+  .brands img {
+    height: 1.07in !important;
   }
 }
 @media (min-width: 1200px) {
