--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -12520,9 +12520,8 @@ h3, .h3 {
 }
 
 .text {
-  font-size: 24px;
   color: #2b4c7f;
-  font-family: "GilroyMedium", sans-serif;
+  font-family: "GilroyRegular", sans-serif;
 }
 
 .hero {
@@ -12531,7 +12530,6 @@ h3, .h3 {
   overflow-x: hidden;
 }
 .hero .punch {
-  font-size: 30px;
   color: #2b4c7f;
 }
 
