--- a/scss/bootstrap/main.scss
+++ b/scss/bootstrap/main.scss
@@ -55,9 +55,8 @@ h3 {
 }
 
 .text {
-  font-size: 24px;
   color: $primary;
-  font-family: "GilroyMedium", sans-serif;
+  font-family: "GilroyRegular", sans-serif;
 }
 
 .hero {
@@ -66,7 +65,6 @@ h3 {
   overflow-x: hidden;
 
   .punch {
-    font-size: 30px;
     color: $primary;
   }
 }
