--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,6 +5,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800&display=swap");
 @font-face {
   font-family: "GilroyLight";
   src: url("../font/Gilroy-Light.woff2") format("woff2");
@@ -2280,8 +2281,8 @@ progress {
 }
 
 .col-form-label {
-  padding-top: calc(1rem + 1px);
-  padding-bottom: calc(1rem + 1px);
+  padding-top: calc(0.75rem + 1px);
+  padding-bottom: calc(0.75rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
   line-height: 1.5;
@@ -2308,9 +2309,9 @@ progress {
 .form-control {
   display: block;
   width: 100%;
-  padding: 1rem 2rem;
+  padding: 0.75rem 1.5rem;
   font-family: "GilroySemiBold", sans-serif;
-  font-size: 1.15rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -2351,9 +2352,9 @@ progress {
   opacity: 1;
 }
 .form-control::file-selector-button {
-  padding: 1rem 2rem;
-  margin: -1rem -2rem;
-  margin-inline-end: 2rem;
+  padding: 0.75rem 1.5rem;
+  margin: -0.75rem -1.5rem;
+  margin-inline-end: 1.5rem;
   color: #212529;
   background-color: #e9ecef;
   pointer-events: none;
@@ -2373,9 +2374,9 @@ progress {
   background-color: #dde0e3;
 }
 .form-control::-webkit-file-upload-button {
-  padding: 1rem 2rem;
-  margin: -1rem -2rem;
-  margin-inline-end: 2rem;
+  padding: 0.75rem 1.5rem;
+  margin: -0.75rem -1.5rem;
+  margin-inline-end: 1.5rem;
   color: #212529;
   background-color: #e9ecef;
   pointer-events: none;
@@ -2398,7 +2399,7 @@ progress {
 .form-control-plaintext {
   display: block;
   width: 100%;
-  padding: 1rem 0;
+  padding: 0.75rem 0;
   margin-bottom: 0;
   line-height: 1.5;
   color: #212529;
@@ -2446,7 +2447,7 @@ progress {
 }
 
 textarea.form-control {
-  min-height: calc(1.5em + (2rem + 2px));
+  min-height: calc(1.5em + (1.5rem + 2px));
 }
 textarea.form-control-sm {
   min-height: calc(1.5em + (0.5rem + 2px));
@@ -2458,7 +2459,7 @@ textarea.form-control-lg {
 .form-control-color {
   max-width: 3rem;
   height: auto;
-  padding: 1rem;
+  padding: 0.75rem;
 }
 .form-control-color:not(:disabled):not([readonly]) {
   cursor: pointer;
@@ -2475,17 +2476,17 @@ textarea.form-control-lg {
 .form-select {
   display: block;
   width: 100%;
-  padding: 1rem 6rem 1rem 2rem;
-  -moz-padding-start: calc(2rem - 3px);
+  padding: 0.75rem 4.5rem 0.75rem 1.5rem;
+  -moz-padding-start: calc(1.5rem - 3px);
   font-family: "GilroySemiBold", sans-serif;
-  font-size: 1.15rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
   background-color: #fff;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
-  background-position: right 2rem center;
+  background-position: right 1.5rem center;
   background-size: 16px 12px;
   border: 1px solid #ced4da;
   border-radius: 12.5rem;
@@ -2503,7 +2504,7 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.25rem rgba(43, 76, 127, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
-  padding-right: 2rem;
+  padding-right: 1.5rem;
   background-image: none;
 }
 .form-select:disabled {
@@ -2725,7 +2726,7 @@ textarea.form-control-lg {
   top: 0;
   left: 0;
   height: 100%;
-  padding: 1rem 2rem;
+  padding: 1rem 1.5rem;
   pointer-events: none;
   border: 1px solid transparent;
   transform-origin: 0 0;
@@ -2737,7 +2738,7 @@ textarea.form-control-lg {
   }
 }
 .form-floating > .form-control {
-  padding: 1rem 2rem;
+  padding: 1rem 1.5rem;
 }
 .form-floating > .form-control::placeholder {
   color: transparent;
@@ -2794,8 +2795,8 @@ textarea.form-control-lg {
 .input-group-text {
   display: flex;
   align-items: center;
-  padding: 1rem 2rem;
-  font-size: 1.15rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -2826,7 +2827,7 @@ textarea.form-control-lg {
 
 .input-group-lg > .form-select,
 .input-group-sm > .form-select {
-  padding-right: 8rem;
+  padding-right: 6rem;
 }
 
 .input-group:not(.has-validation) > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu),
@@ -2876,11 +2877,11 @@ textarea.form-control-lg {
 
 .was-validated .form-control:valid, .form-control.is-valid {
   border-color: #198754;
-  padding-right: calc(1.5em + 2rem);
+  padding-right: calc(1.5em + 1.5rem);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
-  background-position: right calc(0.375em + 0.5rem) center;
-  background-size: calc(0.75em + 1rem) calc(0.75em + 1rem);
+  background-position: right calc(0.375em + 0.375rem) center;
+  background-size: calc(0.75em + 0.75rem) calc(0.75em + 0.75rem);
 }
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
   border-color: #198754;
@@ -2888,18 +2889,18 @@ textarea.form-control-lg {
 }
 
 .was-validated textarea.form-control:valid, textarea.form-control.is-valid {
-  padding-right: calc(1.5em + 2rem);
-  background-position: top calc(0.375em + 0.5rem) right calc(0.375em + 0.5rem);
+  padding-right: calc(1.5em + 1.5rem);
+  background-position: top calc(0.375em + 0.375rem) right calc(0.375em + 0.375rem);
 }
 
 .was-validated .form-select:valid, .form-select.is-valid {
   border-color: #198754;
 }
 .was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
-  padding-right: 11rem;
+  padding-right: 8.25rem;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
-  background-position: right 2rem center, center right 6rem;
-  background-size: 16px 12px, calc(0.75em + 1rem) calc(0.75em + 1rem);
+  background-position: right 1.5rem center, center right 4.5rem;
+  background-size: 16px 12px, calc(0.75em + 0.75rem) calc(0.75em + 0.75rem);
 }
 .was-validated .form-select:valid:focus, .form-select.is-valid:focus {
   border-color: #198754;
@@ -2965,11 +2966,11 @@ textarea.form-control-lg {
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: #dc3545;
-  padding-right: calc(1.5em + 2rem);
+  padding-right: calc(1.5em + 1.5rem);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
-  background-position: right calc(0.375em + 0.5rem) center;
-  background-size: calc(0.75em + 1rem) calc(0.75em + 1rem);
+  background-position: right calc(0.375em + 0.375rem) center;
+  background-size: calc(0.75em + 0.75rem) calc(0.75em + 0.75rem);
 }
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
   border-color: #dc3545;
@@ -2977,18 +2978,18 @@ textarea.form-control-lg {
 }
 
 .was-validated textarea.form-control:invalid, textarea.form-control.is-invalid {
-  padding-right: calc(1.5em + 2rem);
-  background-position: top calc(0.375em + 0.5rem) right calc(0.375em + 0.5rem);
+  padding-right: calc(1.5em + 1.5rem);
+  background-position: top calc(0.375em + 0.375rem) right calc(0.375em + 0.375rem);
 }
 
 .was-validated .form-select:invalid, .form-select.is-invalid {
   border-color: #dc3545;
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  padding-right: 11rem;
+  padding-right: 8.25rem;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
-  background-position: right 2rem center, center right 6rem;
-  background-size: 16px 12px, calc(0.75em + 1rem) calc(0.75em + 1rem);
+  background-position: right 1.5rem center, center right 4.5rem;
+  background-size: 16px 12px, calc(0.75em + 0.75rem) calc(0.75em + 0.75rem);
 }
 .was-validated .form-select:invalid:focus, .form-select.is-invalid:focus {
   border-color: #dc3545;
@@ -3036,8 +3037,8 @@ textarea.form-control-lg {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 1rem 2rem;
-  font-size: 1.15rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
   border-radius: 12.5rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -4012,8 +4013,8 @@ textarea.form-control-lg {
 }
 
 .dropdown-toggle-split {
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
+  padding-right: 1.125rem;
+  padding-left: 1.125rem;
 }
 .dropdown-toggle-split::after, .dropup .dropdown-toggle-split::after, .dropend .dropdown-toggle-split::after {
   margin-left: 0;
@@ -12486,6 +12487,8 @@ textarea.form-control-lg {
 
 .navbar {
   padding: 1rem 0;
+  z-index: 2;
+  background-color: #fff;
 }
 
 .btn {
@@ -12555,7 +12558,7 @@ h3, .h3 {
   margin-right: auto;
   margin-bottom: 24px;
   width: 100%;
-  height: 3.12in;
+  height: 1.5in;
   object-fit: contain;
   object-position: center center;
   transition: all 0.2s ease-in-out;
@@ -12587,8 +12590,8 @@ h3, .h3 {
   color: #fff;
 }
 .funding img {
-  width: 1.62in;
-  height: 1.62in;
+  width: 1in;
+  height: 1in;
   object-fit: contain;
   object-position: center center;
   margin: 2rem auto;
@@ -12607,8 +12610,8 @@ h3, .h3 {
   padding: 80px 0;
 }
 .eligibility img {
-  width: 1.77in;
-  height: 1.77in;
+  width: 1in;
+  height: 1in;
   object-fit: contain;
   object-position: center center;
   margin: 0 auto 2rem;
@@ -12637,7 +12640,7 @@ h3, .h3 {
 }
 .brands img {
   width: 100%;
-  height: 2.07in !important;
+  height: 1.5in !important;
   object-fit: contain;
   object-position: center center;
   transition: all 0.2s ease-in-out;
@@ -12653,7 +12656,7 @@ h3, .h3 {
 .copyright {
   padding: 1.5rem 0;
   text-align: center;
-  font-size: 30px;
+  font-size: 14px;
   font-family: "GilroySemiBold", sans-serif;
   background-color: #2b4c7f;
   color: #fff;
@@ -12764,7 +12767,7 @@ h3, .h3 {
 }
 @media (min-width: 1200px) {
   .btn {
-    min-width: 200px;
+    min-width: 150px;
   }
   h1, .h1 {
     font-size: 60px;
@@ -12774,6 +12777,14 @@ h3, .h3 {
   }
   h3, .h3 {
     font-size: 48px;
+  }
+  .container-xxl,
+  .container-xl,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container {
+    max-width: 1250px;
   }
 }
 @media (min-width: 992px) {
