--- a/scss/bootstrap/bootstrap.scss
+++ b/scss/bootstrap/bootstrap.scss
@@ -4,6 +4,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800&display=swap');
 @font-face {
   font-family: "GilroyLight";
   src: url("../font/Gilroy-Light.woff2") format("woff2");
