--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -12487,7 +12487,7 @@ textarea.form-control-lg {
 
 .navbar {
   padding: 1rem 0;
-  z-index: 2;
+  z-index: 999;
   background-color: #fff;
 }
 
@@ -12509,7 +12509,7 @@ textarea.form-control-lg {
 }
 
 h1, .h1 {
-  font-family: "GilroySemiBold", sans-serif;
+  font-family: "GilroyRegular", sans-serif;
   color: #2b4c7f;
 }
 
@@ -12529,11 +12529,13 @@ h3, .h3 {
 
 .hero {
   background-color: #dfe7f8;
-  padding: 80px 0;
+  padding: 100px 0;
   overflow-x: hidden;
 }
 .hero .punch {
-  color: #2b4c7f;
+  font-size: 20px;
+  color: #212529;
+  margin: 40px 0;
 }
 
 .millions {
@@ -12552,13 +12554,16 @@ h3, .h3 {
 .services {
   padding: 80px 0;
 }
+.services .box {
+  padding: 2rem;
+}
 .services .box img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px;
   width: 100%;
-  height: 1.5in;
+  height: 2.5in;
   object-fit: contain;
   object-position: center center;
   transition: all 0.2s ease-in-out;
@@ -12566,11 +12571,23 @@ h3, .h3 {
 .services .box img:hover {
   transform: scale(1.1);
 }
-.services .box .service,
-.services .box .description {
+.services .box .service {
   color: #2b4c7f;
   font-size: 20px;
   text-align: center;
+}
+.services .box .description {
+  color: #212529;
+  font-size: 1rem;
+  text-align: center;
+  max-height: 48px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.services .box a {
+  display: block;
+  text-align: center;
+  margin-top: 4px;
 }
 
 .why-us {
@@ -12651,6 +12668,26 @@ h3, .h3 {
 
 .contact {
   padding: 80px 0;
+}
+.contact .background {
+  position: relative;
+}
+.contact .background::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+  background-image: url("../images/map-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-origin: lighten;
+}
+.contact .background .row {
+  position: relative;
+  z-index: 1;
 }
 
 .copyright {
