--- a/scss/bootstrap/main.scss
+++ b/scss/bootstrap/main.scss
@@ -18,7 +18,7 @@ $base-transition: all 0.2s ease-in-out !default;
 
 .navbar {
   padding: 1rem 0;
-  z-index: 2;
+  z-index: 999;
   background-color: $white;
 }
 
@@ -43,7 +43,7 @@ $base-transition: all 0.2s ease-in-out !default;
 }
 
 h1 {
-  font-family: "GilroySemiBold", sans-serif;
+  font-family: "GilroyRegular", sans-serif;
   color: $primary;
 }
 
@@ -63,11 +63,13 @@ h3 {
 
 .hero {
   background-color: $primarylight;
-  padding: 80px 0;
+  padding: 100px 0;
   overflow-x: hidden;
 
   .punch {
-    color: $primary;
+    font-size: 20px;
+    color: $dark;
+    margin: 40px 0;
   }
 }
 
@@ -87,13 +89,14 @@ h3 {
 .services {
   padding: 80px 0;
   .box {
+    padding: 2rem;
     img {
       display: block;
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 24px;
       width: 100%;
-      height: 1.5in;
+      height: 2.5in;
       object-fit: contain;
       object-position: center center;
       transition: $base-transition;
@@ -101,11 +104,23 @@ h3 {
         transform: scale(1.1);
       }
     }
-    .service,
-    .description {
+    .service {
       color: $primary;
       font-size: 20px;
       text-align: center;
+    }
+    .description {
+      color: $dark;
+      font-size: 1rem;
+      text-align: center;
+      max-height: 48px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+    a {
+      display: block;
+      text-align: center;
+      margin-top: 4px;
     }
   }
 }
@@ -189,6 +204,26 @@ h3 {
 
 .contact {
   padding: 80px 0;
+  .background {
+    position: relative;
+    &::before {
+      position: absolute;
+      content: '';
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0.1;
+      background-image: url("../images/map-bg.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-origin: lighten;
+    }
+    .row {
+      position: relative;
+      z-index: 1;
+    }
+  }
 }
 
 .copyright {
