menu and font fixes with banner and brands

--- a/scss/bootstrap/bootstrap.scss
+++ b/scss/bootstrap/bootstrap.scss
@@ -5,30 +5,30 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800&display=swap');
-@font-face {
-  font-family: "GilroyLight";
-  src: url("../font/Gilroy-Light.woff2") format("woff2");
-}
+// @font-face {
+//   font-family: "GilroyLight";
+//   src: url("../font/Gilroy-Light.woff2") format("woff2");
+// }
 
-@font-face {
-  font-family: "GilroyRegular";
-  src: url("../font/Gilroy-Regular.woff2") format("woff2");
-}
+// @font-face {
+//   font-family: "GilroyRegular";
+//   src: url("../font/Gilroy-Regular.woff2") format("woff2");
+// }
 
-@font-face {
-  font-family: "GilroyMedium";
-  src: url("../font/Gilroy-Medium.woff2") format("woff2");
-}
+// @font-face {
+//   font-family: "GilroyMedium";
+//   src: url("../font/Gilroy-Medium.woff2") format("woff2");
+// }
 
-@font-face {
-  font-family: "GilroySemiBold";
-  src: url("../font/Gilroy-SemiBold.woff2") format("woff2");
-}
+// @font-face {
+//   font-family: "GilroySemiBold";
+//   src: url("../font/Gilroy-SemiBold.woff2") format("woff2");
+// }
 
-@font-face {
-  font-family: "GilroyBold";
-  src: url("../font/Gilroy-Bold.woff2") format("woff2");
-}
+// @font-face {
+//   font-family: "GilroyBold";
+//   src: url("../font/Gilroy-Bold.woff2") format("woff2");
+// }
 
 // scss-docs-start import-stack
 // Configuration
