--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6,26 +6,6 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800&display=swap");
-@font-face {
-  font-family: "GilroyLight";
-  src: url("../font/Gilroy-Light.woff2") format("woff2");
-}
-@font-face {
-  font-family: "GilroyRegular";
-  src: url("../font/Gilroy-Regular.woff2") format("woff2");
-}
-@font-face {
-  font-family: "GilroyMedium";
-  src: url("../font/Gilroy-Medium.woff2") format("woff2");
-}
-@font-face {
-  font-family: "GilroySemiBold";
-  src: url("../font/Gilroy-SemiBold.woff2") format("woff2");
-}
-@font-face {
-  font-family: "GilroyBold";
-  src: url("../font/Gilroy-Bold.woff2") format("woff2");
-}
 :root {
   --bs-blue: #2b4c7f;
   --bs-indigo: #6610f2;
@@ -50,7 +30,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-font-sans-serif: "GilroyRegular", sans-serif;
+  --bs-font-sans-serif: "Noto Sans", sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
 }
@@ -2310,7 +2290,6 @@ progress {
   display: block;
   width: 100%;
   padding: 0.75rem 1.5rem;
-  font-family: "GilroySemiBold", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -2478,7 +2457,6 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.75rem 4.5rem 0.75rem 1.5rem;
   -moz-padding-start: calc(1.5rem - 3px);
-  font-family: "GilroySemiBold", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -3026,7 +3004,6 @@ textarea.form-control-lg {
 
 .btn {
   display: inline-block;
-  font-family: "GilroySemiBold", sans-serif;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -12469,22 +12446,6 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.fw-medium {
-  font-family: "GilroyMedium", sans-serif;
-}
-
-.fw-semibold {
-  font-family: "GilroySemiBold", sans-serif;
-}
-
-.fw-bold {
-  font-family: "GilroyBold", sans-serif;
-}
-
-.fw-light {
-  font-family: "GilroyLight", sans-serif;
-}
-
 .navbar {
   padding: 1rem 0;
   z-index: 999;
@@ -12498,33 +12459,67 @@ textarea.form-control-lg {
   transform: translateY(-4px);
 }
 
+.navbar-nav .nav-item.dropdown .dropdown-menu .has-submenu {
+  position: relative;
+  top: 0;
+}
+.navbar-nav .nav-item.dropdown .dropdown-menu .has-submenu:hover .submenu {
+  display: block;
+}
+.navbar-nav .nav-item.dropdown .dropdown-menu .dropdown-item {
+  font-size: 18px;
+  padding: 1rem 2rem;
+}
+.navbar-nav .nav-item.dropdown .dropdown-menu .submenu {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  background-color: white;
+  border-radius: 0.5rem;
+  display: none;
+  min-width: 300px;
+  padding: 8px 0;
+}
+.navbar-nav .nav-item.dropdown .dropdown-menu .submenu .submenu-item {
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  display: block;
+}
+.navbar-nav .nav-item.dropdown .dropdown-menu .submenu .submenu-item:hover {
+  background-color: #e9ecef;
+}
+.navbar-nav .nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+}
 .navbar-nav .nav-link {
-  font-family: "GilroySemibold", sans-serif;
+  font-weight: 400;
   color: #2b4c7f !important;
   transition: all 0.2s ease-in-out;
   border-bottom: 2px solid transparent;
+  text-align: center;
 }
 .navbar-nav .nav-link:hover {
   border-bottom-color: #2b4c7f;
 }
 
 h1, .h1 {
-  font-family: "GilroyRegular", sans-serif;
+  font-weight: 300;
+  line-height: 1.75;
   color: #2b4c7f;
 }
 
 h2, .h2 {
-  font-family: "GilroyMedium", sans-serif;
+  font-weight: 500;
 }
 
 h3, .h3 {
   color: #2b4c7f;
-  font-family: "GilroySemiBold", sans-serif;
+  font-weight: 600;
 }
 
 .text {
   color: #2b4c7f;
-  font-family: "GilroyRegular", sans-serif;
+  font-weight: 400;
 }
 
 .hero {
@@ -12618,7 +12613,7 @@ h3, .h3 {
   transform: rotate3d(1, 1, 1, 4deg);
 }
 .funding .heading {
-  font-family: "GilroySemiBold", sans-serif;
+  font-weight: 600;
   font-size: 24px;
   margin-bottom: 0;
 }
@@ -12638,7 +12633,7 @@ h3, .h3 {
   transform: rotateY(180deg);
 }
 .eligibility .heading {
-  font-family: "GilroySemiBold", sans-serif;
+  font-weight: 600;
   font-size: 24px;
   margin-bottom: 1rem;
   color: #2b4c7f;
@@ -12661,9 +12656,6 @@ h3, .h3 {
   object-fit: contain;
   object-position: center center;
   transition: all 0.2s ease-in-out;
-}
-.brands img:hover {
-  transform: scale(1.1);
 }
 
 .contact {
@@ -12694,7 +12686,7 @@ h3, .h3 {
   padding: 1.5rem 0;
   text-align: center;
   font-size: 14px;
-  font-family: "GilroySemiBold", sans-serif;
+  font-weight: 600;
   background-color: #2b4c7f;
   color: #fff;
 }
@@ -12703,7 +12695,7 @@ h3, .h3 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 60vh;
+  height: 15vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12713,7 +12705,8 @@ h3, .h3 {
   position: relative;
   z-index: 3;
   color: white;
-  font-family: "GilroyBold", sans-serif;
+  font-weight: 600;
+  font-size: 32px;
 }
 .banner::before {
   position: absolute;
@@ -12758,6 +12751,16 @@ h3, .h3 {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' class='bi bi-check' viewBox='0 0 16 16'%3E%3Cpath d='M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z'/%3E%3C/svg%3E");
 }
 
+@media (max-width: 1199.98px) {
+  .navbar-nav .nav-item.dropdown .dropdown-menu .submenu {
+    position: relative;
+    left: unset;
+    top: unset;
+    padding: 1rem 2rem;
+    border-left: 2px solid #2b4c7f;
+    border-radius: 0;
+  }
+}
 @media (max-width: 991.98px) {
   section {
     padding: 40px 0 !important;
@@ -12826,6 +12829,6 @@ h3, .h3 {
 }
 @media (min-width: 992px) {
   .navbar-nav .nav-link {
-    font-size: 20px;
+    font-size: 1rem;
   }
 }
