--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -427,7 +427,7 @@ $aspect-ratios: (
 
 // scss-docs-start font-variables
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      "GilroyRegular", sans-serif !default;
+$font-family-sans-serif:      "Noto Sans", sans-serif !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 // stylelint-enable value-keyword-case
 $font-family-base:            var(--#{$variable-prefix}font-sans-serif) !default;
@@ -596,7 +596,7 @@ $table-variants: (
 // scss-docs-start input-btn-variables
 $input-btn-padding-y:         .75rem !default;
 $input-btn-padding-x:         1.5rem !default;
-$input-btn-font-family:       "GilroySemiBold", sans-serif !default;
+$input-btn-font-family:       null;
 $input-btn-font-size:         $font-size-base !default;
 $input-btn-line-height:       $line-height-base !default;
 
