--- a/scss/bootstrap/media-query.scss
+++ b/scss/bootstrap/media-query.scss
@@ -2,6 +2,22 @@
 }
 
 @include media-breakpoint-down(xl) {
+  .navbar-nav {
+    .nav-item {
+      &.dropdown {
+        .dropdown-menu {
+          .submenu {
+            position: relative;
+            left: unset;
+            top: unset;
+            padding: 1rem 2rem;
+            border-left: 2px solid $primary;
+            border-radius: 0;
+          }
+        }
+      }
+    }
+  }
 }
 
 @include media-breakpoint-down(lg) {
@@ -101,7 +117,7 @@
 @include media-breakpoint-up(lg) {
   .navbar-nav {
     .nav-link {
-      font-size: 20px;
+      font-size: 1rem;
     }
   }
 }
