--- a/scss/bootstrap/media-query.scss
+++ b/scss/bootstrap/media-query.scss
@@ -95,6 +95,21 @@
 }
 
 @include media-breakpoint-down(sm) {
+  .hero {
+    .banners {
+      .home-banner {
+        &.banner-1 {
+          background-size: 350%;
+          background-position: right 40% bottom -36px;
+        }
+        &.banner-2 {
+          img {
+            max-height: 240px !important;
+          }
+        }
+      }
+    }
+  }
 }
 
 @include media-breakpoint-up(xl) {
