--- a/scss/bootstrap/bootstrap.scss
+++ b/scss/bootstrap/bootstrap.scss
@@ -5,6 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800&display=swap');
+ @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 // @font-face {
 //   font-family: "GilroyLight";
 //   src: url("../font/Gilroy-Light.woff2") format("woff2");
