--- a/scss/bootstrap/_accordion.scss
+++ b/scss/bootstrap/_accordion.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  font-weight: 600;
   padding: $accordion-button-padding-y $accordion-button-padding-x;
   @include font-size($font-size-base);
   color: $accordion-button-color;
