--- a/scss/bootstrap/main.scss
+++ b/scss/bootstrap/main.scss
@@ -17,7 +17,7 @@ $base-transition: all 0.2s ease-in-out !default;
 // }
 
 .navbar {
-  padding: 1rem 0;
+  padding: .5rem 0;
   z-index: 999;
   background-color: $white;
 }
@@ -146,6 +146,9 @@ h3 {
 
   .banners {
     position: relative;
+    .slick-list {
+      height: auto !important;
+    }
 
     .home-banner {
       padding: 40px 0 100px 0;
@@ -153,19 +156,19 @@ h3 {
       background-repeat: no-repeat;
 
       &.banner-1 {
-        background-image: url("../images/home-banner-1.png");
+        background-image: url("../images/home-banner-1.webp");
         background-size: 100%;
         background-position: bottom left;
       }
 
       &.banner-2 {
-        background-image: url("../images/banner-2.png");
+        background-image: url("../images/banner-2.webp");
         background-size: 32% !important;
         background-position: bottom right;
       }
 
       &.banner-3 {
-        background-image: url("../images/home-banner-3.jpg");
+        background-image: url("../images/home-banner-3.webp");
         background-size: 50% !important;
         background-position: bottom right;
       }
@@ -316,6 +319,10 @@ h3 {
 
 .contact {
   padding: 80px 0;
+  .contact-image {
+    object-fit: contain;
+    object-position: center center;
+  }
   .background {
     position: relative;
     &::before {
@@ -326,7 +333,7 @@ h3 {
       width: 100%;
       height: 100%;
       opacity: 0.1;
-      background-image: url("../images/map-bg.png");
+      background-image: url("../images/map-bg.webp");
       background-repeat: no-repeat;
       background-size: cover;
       background-origin: lighten;
@@ -377,11 +384,11 @@ h3 {
   }
 
   &.about-us {
-    background-image: url("../images/about-bg.jpg");
+    background-image: url("../images/about-bg.webp");
   }
 
   &.apply-now {
-    background-image: url("../images/apply-now.jpg");
+    background-image: url("../images/apply-now.webp");
   }
 }
 
